--- a/bibsonomy-web-common/pom.xml
+++ b/bibsonomy-web-common/pom.xml
@@ -33,7 +33,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.8.12</version>
+		<version>3.8.13-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
