--- a/bibsonomy-rest-client/pom.xml
+++ b/bibsonomy-rest-client/pom.xml
@@ -37,7 +37,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.9.0-SNAPSHOT</version>
+		<version>3.8.13</version>
 	</parent>
 	<licenses>
 		<license>
