--- a/bibsonomy-qrcode/pom.xml
+++ b/bibsonomy-qrcode/pom.xml
@@ -33,7 +33,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.8.13</version>
+		<version>3.8.14-SNAPSHOT</version>
 	</parent>
 	<artifactId>bibsonomy-qrcode</artifactId>
 	<name>BibSonomy-QRCode</name>
