--- a/bibsonomy-recommender/pom.xml
+++ b/bibsonomy-recommender/pom.xml
@@ -42,7 +42,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.8.13</version>
+		<version>3.8.14-SNAPSHOT</version>
 	</parent>
 	
 	<licenses>
