--- a/pom.xml
+++ b/pom.xml
@@ -767,5 +767,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<version>3.8.13</version>
+	<version>3.8.14-SNAPSHOT</version>
 </project>
