added validator for projects
added joda time to dependency management

--- a/.hgignore
+++ b/.hgignore
@@ -2,7 +2,7 @@ target
 bin
 work
 .classpath
-.project
+\.project
 /.settings/
 .externalToolBuilders
 .tomcatplugin
@@ -10,11 +10,9 @@ work
 src/main/webapp/WEB-INF/lib
 src/main/webapp/WEB-INF/classes
 src/main/webapp/META-INF
-bibsonomy-lucene/src/test/resources/lucene_*
 nbactions.xml
 nb-configuration.xml
 Thumbs.db
-bibsonomy-lucene/data
 
 # intellij files
 \.iml$
