--- a/bibsonomy-model/pom.xml
+++ b/bibsonomy-model/pom.xml
@@ -96,5 +96,10 @@
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
