--- a/pom.xml
+++ b/pom.xml
@@ -765,6 +765,11 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.5.3</version>
 			</dependency>
+			<dependency>
+				<groupId>joda-time</groupId>
+				<artifactId>joda-time</artifactId>
+				<version>2.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<version>3.8.14-SNAPSHOT</version>
