--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -10,7 +10,7 @@ project.files.home = ${user.home}
 
 # bookmark previews server (empty image server = disabled previews)
 project.img = 
-project.blog  = http://blog.bibsonomy.org
+project.blog  = https://blog.bibsonomy.org
 project.social.twitter = bibsonomyCrew
 project.social.google-plus = 102073418538419220890
 project.social.facebook = 
